미디어 쿼리 관련 버그 수정
- 크롬 브라우저 너비가 380픽셀보다 작아지지 않기 떄문에 생긴 문제 해결
- 작은 화면에서의 안내메세지가 스크롤에 따라 따라오지 않는 문제 해결
- 안내메세지가  화면을 덮어서 화면 클릭이 안되는 문제 해결

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,7 @@ body {
 }
 
 .media-info-msg {
-  /* position: fixed; */
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -25,12 +24,10 @@ body {
   justify-content: center;
   align-items: center;
   background-color: salmon;
-  opacity: 1;
 }
 
 @media screen and (max-width: 500px) {
   .media-info-msg {
-    /* display: none; */
-    opacity: 0;
+    display: none;
   }
 }
