--- a/css/footer.css
+++ b/css/footer.css
@@ -14,10 +14,6 @@ footer {
   align-items: center;
 }
 
-.footer-icons__img {
-  width: 30px;
-}
-
 .footer-icons {
   font-size: 10px;
   display: flex;
@@ -34,7 +30,7 @@ footer {
   transform: scale(0.8);
 }
 
-/* @keyframes icons-둥-둥 {
+@keyframes icons-둥-둥 {
   0% {
     transform: translateY(0px);
   }
@@ -54,4 +50,4 @@ footer {
 
 .footer-icons:hover .footer-icons__img {
   animation: 2s icons-둥-둥;
-} */
+}
